<resources>
    <string name="app_name">Beautiful Bangladesh</string>
    <string name="info_shat_mosque">The Sixty Pillar Mosque (the Shat Gambuj), in Bagerhat in south Bangladesh, on the eastern bank of a sweet water tank or pond (the takur dighi) is one of the oldest mosques in the country and is described as "historic mosque representing the Golden Era of Muslim Bengal".</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="history_shat_mosque">It is laid is over an area of 160 feet (49 m) by 108 feet (33 m). The mosque is unique in that it has 60 pillars that support 77 exquisitely curved that have worn away over time; it has seven central domes that are four-sided and built in Bengali style. It was established in 1440 by Khan Jahan Ali.</string>
    <string name="related_shat_mosque">It was used for prayers, as an assembly hall and madrasa (an Islamic school). Seventy seven domes are over the roof and four smaller ones at the four corners are towers (the towers were used to call the faithfuls to attend prayers). The large prayer hall has 11 arched doorways on the east and 7 each on the north and south which provide ventilation and light to the hall. There are 7 longitudinal aisles and 11 deep bays in the midst of slim columns made of stone. These columns support the curving arches that are overlaid by the domes.</string>
    <string name="info_somapura_mahavihara">Somapura Mahavihara in Paharpur, Badalgachhi Upazila, Naogaon District, Bangladesh is among the best known Buddhist viharas in the Indian Subcontinent and is one of the most important archeological sites in the country. It was designated a UNESCO World Heritage Site in 1985.</string>
    <string name="history_somapura_mahavihara">The Somapura Mahavihara as built by the second Pala king Dharmapala (circa 781–821) of Pāla Dynasty. Tibetan sources, including Tibetan translations of Dharmakayavidhi and Madhyamaka Ratnapradipa, Taranatha\'s history and Pag-Sam-Jon-Zang, mention that Dharmapala\'s successor Devapala (circa 810–850) built it after his conquest of Varendra.  The Paharpur pillar inscription bears the mention of 5th regnal year of Devapala\'s successor Mahendrapala (circa 850–854) along with the name of Bhiksu Ajayagarbha. Taranatha\'s Pag Sam Jon Zang records that the monastery was repaired during the reign of Mahipala (circa 995–1043 AD).</string>
    <string name="related_somapura_mahavihara">During the rule of the Sena dynasty, known as Karnatadeshatagata Brahmaksatriya, in the second half of the 12th century the vihara started to decline for the last time. One scholar writes, "The ruins of the temple and monasteries at Pāhāpur do not bear any evident marks of large-scale destruction. The downfall of the establishment, by desertion or destruction, must have been sometime in the midst of the widespread unrest and displacement of population consequent on the Muslim invasion."</string>
    <string name="info_Sundarbans">The Sundarbans is a natural region in the Bengal region comprising Eastern India and Bangladesh. It is the largest single block of tidal halophytic mangrove forest in the world. The Sundarbans covers approximately 10,000 square kilometres (3,900 sq mi) of which 60 percent is in Bangladesh with the remainder in India. The Sundarbans is a UNESCO World Heritage Site.</string>
    <string name="history_Sundarbans">The history of the area can be traced back to 200–300 AD. A ruin of a city built by Chand Sadagar has been found in the Baghmara Forest Block. During the Mughal period, the Mughal Kings leased the forests of the Sundarbans to nearby residents. Many criminals took refuge in the Sundarbans from the advancing armies of Emperor Akbar. Many have been known to be attacked by tigers. Many of the buildings which were built by them later fell to hands of Portuguese pirates, salt smugglers and dacoits in the 17th century. Evidence of the fact can be traced from the ruins at Netidhopani and other places scattered all over Sundarbans</string>
    <string name="related_Sundarbans">The Sundarban forest lies in the vast delta on the Bay of Bengal formed by the super confluence of the Ganges, Padma, Brahmaputra and Meghna rivers across southern Bangladesh. The seasonally flooded Sundarbans freshwater swamp forests lie inland from the mangrove forests on the coastal fringe. The forest covers 10,000 square kilometres (3,900 sq mi) of which about 6,000 square kilometres (2,300 sq mi) are in Bangladesh.[12] It became inscribed as a UNESCO world heritage site in 1997. The Indian part of Sundarbans is estimated to be about 4,110 square kilometres (1,590 sq mi), of which about 1,700 square kilometres (660 sq mi) is occupied by waterbodies in the forms of river, canals and creeks of width varying from a few meters to several kilometres.</string>
    <string name="info_CoxBazarBeach">Cox\'s Bazar Beach is the longest unbroken sea beach in the world, running 125 km, and the top tourist destination of Bangladesh.At high tide the beach is 200m wide and at low tide is 400m wide on an average.</string>
    <string name="geography_CoxBazarBeach">Cox\'s Bazar town with an area of 6.85 km², is located at 21°35′0″N 92°01′0″E and bounded by Bakkhali River on the north and East, Bay of Bengal in the West, and Jhilwanj Union in the south.</string>
    <string name="climate_CoxBazarBeach">The climate of Bangladesh is mostly determined by its location in the tropical monsoon region: high temperature, heavy rainfall, generally excessive humidity, and distinct seasonal variations. The climate of Cox\'s bazar is mostly similar to the rest of the country. It is further characterised by the location in the coastal area. The annual average temperature in Cox\'s Bazar remains at about a maximum of 34.8 °C and a minimum of 16.1 °C. The average amount of rainfall remains at 4,285 mm.</string>
    <string name="info_kuakata_sea_beach">Kuakata is a panoramic sea beach and village on the southernmost tip of Bangladesh. Located in the Patuakhali district, Kuakata has a wide sandy beach from where one can see both the sunrise and sunset. It is about 320 Kilometers south of Dhaka, the capital, and about 70 Kilometers from the district headquarters. The Kuakata beach is 30 km long and 6 km wide. On 13 September 2007 government had announced a red alert in Kuakata as caution for a possible Tsunami.</string>
    <string name="overview_kuakata_sea_beach">Kuakata offers a full view of the sunrise and sunset from the same white sandy beach in the water of the Bay of Bengal. Locally known as Shagor Kannya (Daughter of ocean), the long strip of dark, marbled sand stretches for about 30 km. The long and wide beach at Kuakata has a typical natural setting. This sandy beach has gentle slopes into the Bay of Bengal. Kuakata is also a sanctuary for migratory winter birds.</string>
    <string name="related_kuakata_sea_beach">Kuakata is the place of pilgrimage for both Hindu and Buddhist communities. Innumerable devotees arrive here at the festival of \'Rush Purnima\' and \'Maghi Purnima\'. On these two occasions the pilgrims take holy bath at the bay and participate in the traditional fairs. One may also visit the 100 years old Buddhist Temple where the statue of Goutama Buddha and two wells of 200 years old are located.</string>
    <string name="info_martin_island">St. Martin\'s Island is a small island (area only 8 km2) in the northeastern part of the Bay of Bengal, about 9 km south of the tip of the Cox\'s Bazar-Teknaf peninsula, and forming the southernmost part of Bangladesh. There is a small adjoining island that is separated at high tide, called Chhera island. It is about 8 km west of the northwest coast of Myanmar, at the mouth of the Naf River. The first settlement started just 250 years ago by some Arabian sailors who named the island ‘Zajira’. During British occupation the island was named St. Martin Island. The local names of the island are "Narical Gingira", also spelled "Narikel Jinjira/Jinjera", which means \'Coconut Island\' in Bengali, and "Daruchini Dip". It is the only coral island in Bangladesh.</string>
    <string name="overview_martin_island">It is possible to walk around the island in a day because it measures only 8 km2 (3 sq. mile), shrinking to about 5 km2 (2 sq. mi) during high tide. The island exists only because of its coral base, so removal of that coral risks erosion of the beaches. Because of this, St. Martin\'s has lost roughly 25% of its coral reef in the past seven years.</string>
    <string name="climate_martin_island">You will get the best weather usually between November and February. Undoubtedly, this is the major tourist season. Between March and July, a tourist must keep his eyes on the forecast keenly, as a cyclone can strike during these times. The island was devastated by a cyclone in 1991 but has fully recovered, and was untouched by the 2004 tsunami. Thus, March to July is tourist off-season.</string>
    <string name="info_bandarban">Bandarban is a district in South-Eastern Bangladesh, and a part of the Chittagong Division. It is one of the three districts that make up the Chittagong Hill Tracts, the others being Rangamati District and Khagrachhari District. Bandarban is regarded as one of the most attractive travel destinations in Bangladesh. Bandarban (meaning the dam of monkeys), or in Marma or Arakanese language as "Rwa-daw Mro" is also known as Arvumi or the Bohmong Circle (of the rest of the three hill districts Rangamati is the Chakma Circle, Raja Devasish Roy and Khagrachari is the Mong Circle, Raja Sachingprue Marma).</string>
    <string name="geography_bandarban">The three highest peak of Bangladesh - Tahjindong (1280 meters, also known as bijoy), Mowdok Mual (1052 meters), and Keokradong (883 metres) - are located in Bandarban district, as well as Raikhiang Lake, the highest lake in Bangladesh. Chimbuk peak and Boga Lake are two more highly noted features of the district. Though most Bangladesh sources cite Keokradong as the highest peak in the country, but Tazing Dong (sometimes spelled as Tahjingdong, and also known as Bijoy) lying further east is recognized both by government and expert sources as a taller peak. Measurements taken by English adventurer Ginge Fullen shows that an officially unnamed peak near the Myanmar border (locally known as Mowdok Mual) is the highest point in Bangladesh.Recently a team from Nature Adventure Club took part in an expedition in the mowdok range and agreed with the ginge fullens statement.
      They got the height of this peak as 3488 feet with gps accuracy of 3 meter. The unnamed summit is known as \'Saka Haphong\' to the local Tripura tribes.</string>
    <string name="info_khagrachari">Khagrachhari is a district in south-eastern Bangladesh. It is a part of the Chittagong Division and the Chittagong Hill Tracts. Its local name is "Chengmi". Khagrachhari is also known as Phalang Htaung or the Mong Circle (of the rest of the three hill districts Rangamati is the Chakma Circle and Bandarban is the Bohmong Circle). Khagrachhari town is the home town of the Mong Chief (currently King, or Raja, Saching Prue Chowdhury who is the head of the Arakanese descendants living in the circle.</string>
    <string name="info_rangamati">Rangamati is a district in South-eastern Bangladesh. It is a part of the Chittagong Division and the town of Rangamati serves as the headquarters of the district. Area-wise, Rangamati is the largest district of the country.</string>
</resources>